GNOME Bugzilla – Bug 733309
Potential error in checking NetworkManager version
Last modified: 2014-08-08 04:02:16 UTC
In g-c-c/panel/network/cc-network-panel.c:panel_check_network_manager_version() The following code is probably erroneous: if (major > 0 || major > 9 || (minor <= 8 && micro < 992)) {
Created attachment 280961 [details] [review] A patch to fix the problem
Review of attachment 280961 [details] [review]: Looks good.
(In reply to comment #2) > Review of attachment 280961 [details] [review]: > > Looks good. Thank you very much for the review, will the fix be checked in the repo?
Pushed to gnome-3-8, gnome-3-10, gnome-3-12 and master.
(In reply to comment #4) > Pushed to gnome-3-8, gnome-3-10, gnome-3-12 and master. Thanks!