network: Fix typo in NetworkManager version checking

The code is meant to work with NetworkManager of version 0.9.0+ or 0.8.992+

https://bugzilla.gnome.org/show_bug.cgi?id=733309